Add module for client-side analyses. Add some more filtering options to webapi. Start working on client-side API client
